fix broken links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starcode-web-development-course-website",
+  "name": "WebDev-Course",
   "version": "0.0.0",
   "private": true,
   "scripts": {
